MYSQLEXCEL-28 - Attempt to create one single connection instead of two for imported Excel tables
- Split the code that creates an Excel table so code is more modular and in order to move the code, that creates a Workbook connection needed for Model Tables to be created by Excel, to the MySqlDataRelationship class since those connections are only needed when creating new relationships and not to refresh imported data. Deleted the RemoveWorkbookConnection method since connections would be wrongly deleted when closing MySQL for Excel although they may be still needed by Excel tables. (source\Classes\ImportSessionInfo.cs, source\Classes\MySqlDataRelationship.cs)
- Modified the GetConnectionStringForCmdDefault method to add a Port to the connection string. (source\Classes\MySqlDataUtilities.cs, source\MySQL.ForExcel.csproj)
- Added the ParentWorkbookNullException class. (source\Classes\Exceptions\ParentWorkbookNullException.cs)
- Removed some methods that are only used in one single method of the MySqlDataRelationship class. Moved some code from the ImportSessionInfo class to the GetExcelTableNameAvoidingDuplicates since the code is always needed when getting a non-duplicate Excel table name. Added the GetWorkbookConnectionNameAvoidingDuplicates methods to avoid duplicate names on created Workbook connections. (source\Classes\ExcelUtilities.cs)
- Removed deprecated and non-used methods to avoid further confusion on which methods need to be modified in case of bugs. (source\Classes\MySQLDataTable.cs, source\Classes\ExcelUtilities.cs)
- Renamed the AddSummaryFields properties to AddSummaryRow to be more consistent with the action. (source\Classes\DbProcedure.cs, source\Classes\DbView.cs, source\Classes\ImportDataParams.cs, source\Classes\ImportSessionInfo.cs, source\Classes\MySQLDataTable.cs, source\Forms\ImportMultipleDialog.cs, source\Forms\ImportProcedureForm.cs, source\Forms\ImportTableViewForm.cs)
- Added resource strings for the workbook connection descriptions. (sou

--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -235,6 +235,7 @@
     <Compile Include="Classes\DbSchema.cs" />
     <Compile Include="Classes\DbTable.cs" />
     <Compile Include="Classes\DbView.cs" />
+    <Compile Include="Classes\Exceptions\ParentWorkbookNullException.cs" />
     <Compile Include="Classes\ImportDataParams.cs" />
     <Compile Include="Classes\ImportSessionInfo.cs" />
     <Compile Include="Classes\EditSessionInfo.cs" />
