MYSQLEXCEL-26 - Show schema character set and collation on Schema Selection Panel nodes
- Added a new context menu item shown as "Display Schema Collations" which can be checked and unchecked and is used to change the look&feel of the SchemasList, it makes the schema nodes appear just as the connection nodes in the WelcomePanel and displays their collations as a subtitle.  Created the SetItemsAppearance method to make that logic happen. (source\Panels\SchemaSelectionPanel.cs, source\Panels\SchemaSelectionPanel.Designer.cs, source\Panels\SchemaSelectionPanel.resx)
- Added the SchemasDisplayCollations setting to save the "Display Schema Collations" option selected by the user and apply it every time the SchemaSelectionPanel is shown. (source\Properties\Settings.Designer.cs, source\Properties\Settings.settings)
- Added a couple of images to the resources, these are needed for the new context menu item and to display a bigger icon when showing collations. (source\Properties\Resources.Designer.cs, source\Properties\Resources.resx, source\app.config, source\MySQL.ForExcel.csproj, source\Resources\MySQLforExcel-SchemaPanel-ListItem-Schema-32x32.png, source\Resources\MySQLforExcel-SchemaPanel-SchemaInspect-32x32.png)
- Created the SetConnection method to be consistent with the SchemaSelectionPanel class, moved the logic that was in the WbConnection property setter to this new method. Removed the WbConnection property since it is no longer needed. (source\Classes\DbObjectSelectionPanel.cs, source\Controls\ExcelAddInPanel.cs)
- Created the AddChildNode private method and moved some common logic from the AddConnectionNode and AddDbObjectNode methods to this new one. (source\Controls\MySqlListView.cs)
- Added code to one of the MySqlListViewNode constructors to set the Subtitle for schema nodes showing their collations when needed. (source\Classes\MySqlListViewNode.cs)
- Added new properties related to collations and changed the constructor to pass them on at the object creatio

--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -611,6 +611,8 @@
     <None Include="Resources\MySQLforExcel-ObjectPanel-ImportManyDisabled-24x24.png" />
     <None Include="Resources\MySQLforExcel-ObjectPanel-RelatedObjects-32x32.png" />
     <None Include="Resources\MySQLforExcel-ObjectPanel-MultiSelectObject-32x32.png" />
+    <None Include="Resources\MySQLforExcel-SchemaPanel-ListItem-Schema-32x32.png" />
+    <None Include="Resources\MySQLforExcel-SchemaPanel-SchemaInspect-32x32.png" />
     <Content Include="Resources\refresh_sidebar.png" />
     <None Include="Resources\remove_col_mapping.png" />
     <None Include="Resources\SplashScreenExcel.png" />
