--- a/source/app.config
+++ b/source/app.config
@@ -94,6 +94,9 @@
             <setting name="ExportShowAllMySqlDataTypes" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="SchemasDisplayCollations" serializeAs="String">
+                <value>False</value>
+            </setting>
         </MySQL.ForExcel.Properties.Settings>
     </userSettings>
 </configuration>
