--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -243,6 +243,7 @@
     <Compile Include="Classes\Exceptions\QueryExceedsMaxAllowedPacketException.cs" />
     <Compile Include="Classes\Exceptions\UnhandledMySqlTypeException.cs" />
     <Compile Include="Classes\Exceptions\UnrecognizedBooleanValueException.cs" />
+    <Compile Include="Classes\ListViewColumnSorter.cs" />
     <Compile Include="Classes\MiscUtilities.cs" />
     <Compile Include="Classes\MySqlColumnMapping.cs" />
     <Compile Include="Classes\MySqlColumnMappingList.cs" />
