MYSQLEXCEL-75 - Edit Data - Import Data dialog should be replaced by Preview one or removed
- Added the new EditPreviewMySqlData setting to let users show / skip the Preview Data dialog when clicking on the Edit MySQL Data action label. By default it is true. (source\Properties\Settings.Designer.cs, source\Properties\Settings.settings, source\app.config)
- Added a new checkbox to the GlobalOptionsDialog to control the new EditPreviewMySqlData setting. (source\Forms\GlobalOptionsDialog.cs, source\Forms\GlobalOptionsDialog.Designer.cs, source\Forms\GlobalOptionsDialog.resx)
- Changed code in the EditTableData to show the Preview Data dialog when the new EditPreviewMySqlData setting is turned on, also now the ImportHidingDialog method of the ImportTableViewForm class is always called since the intention is to replace the Import dialog with the Preview one. Simplified the EditConnectionInfo method by changing its signature to receive only what the method needs. (source\Controls\ExcelAddInPane.cs)
- Added a new parameter to the PreviewDataDialog constructor to show/hide a Cancel button and added the InitializeDialogButtons method to do that. (source\Forms\PreviewDataDialog.cs, source\Forms\PreviewDataDialog.Designer.cs, source\Forms\PreviewDataDialog.resx, source\Forms\ImportMultipleDialog.cs)
- Added a new context-menu item to preview the data of a right-clicked Table or View shown in the DB Objects Selection panel. (source\Panels\DBObjectSelectionPanel.cs, source\Panels\DBObjectSelectionPanel.Designer.cs, source\Panels\DBObjectSelectionPanel.resx)

--- a/source/Properties/Settings.settings
+++ b/source/Properties/Settings.settings
@@ -101,5 +101,8 @@
     <Setting Name="SchemasDisplayCollations" Provider="MySQL.ForExcel.Classes.MySqlForExcelSettings" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="EditPreviewMySqlData" Provider="MySQL.ForExcel.Classes.MySqlForExcelSettings" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
