--- a/source/app.config
+++ b/source/app.config
@@ -97,6 +97,9 @@
             <setting name="SchemasDisplayCollations" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="EditPreviewMySqlData" serializeAs="String">
+                <value>True</value>
+            </setting>
         </MySQL.ForExcel.Properties.Settings>
     </userSettings>
 </configuration>
