MYSQLEXCEL-78 - Connection list no populated in Excel 2007/2010 MYSQLEXCEL-82 - Handle fabric, fabric managed, and unknown connections in welcome panel
- Added new icons to represent SSH, SSH disabled, normal disabled, and fabric managed connections. (source\MySQL.ForExcel.csproj, source\Properties\Resources.Designer.cs, source\Properties\Resources.resx, source\Resources\MySQLforExcel-WelcomePanel-Connection-Fabric.png, source\Resources\MySQLforExcel-WelcomePanel-Connection-SSH.png, source\Resources\MySQLforExcel-WelcomePanel-Connection-SSH-Disabled.png, source\Resources\MySQLforExcel-WelcomePanel-ListItem-Connection-Disabled-32x32.png)
- Modified the WelcomePanel control to include the new images mentioned above, and to set them accordingly in the AddConnectionToList method. (source\Panels\WelcomePanel.cs, source\Panels\WelcomePanel.Designer.cs, source\Panels\WelcomePanel.resx)
- Updated the MySQL Utility DLL to include the latest properties that identify a connection as a Fabric Managed one and other fixes. (source\libraries\MySQL.Utility.dll)
- Fixed a condition in the InitializeMySqlWorkbenchStaticSettings method to create connections from installed MySQL services when Workbench is installed but its connections.xml file does not exist. (source\ThisAddIn.cs)

--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -614,6 +614,10 @@
     <None Include="Resources\MySQLforExcel-ObjectPanel-MultiSelectObject-32x32.png" />
     <None Include="Resources\MySQLforExcel-SchemaPanel-ListItem-Schema-32x32.png" />
     <None Include="Resources\MySQLforExcel-SchemaPanel-SchemaInspect-32x32.png" />
+    <None Include="Resources\MySQLforExcel-WelcomePanel-Connection-SSH.png" />
+    <None Include="Resources\MySQLforExcel-WelcomePanel-Connection-SSH-Disabled.png" />
+    <None Include="Resources\MySQLforExcel-WelcomePanel-ListItem-Connection-Disabled-32x32.png" />
+    <None Include="Resources\MySQLforExcel-WelcomePanel-Connection-Fabric.png" />
     <Content Include="Resources\refresh_sidebar.png" />
     <None Include="Resources\remove_col_mapping.png" />
     <None Include="Resources\SplashScreenExcel.png" />
