MySQL Bug #73911, Bug #19639669 - SOME TABLES CAN NOT BE EDITED CORRECTLY
- Updated the MySQL.Utility DLL with the latest one. (source\libraries\MySQL.Utility.dll)
- Created MySqlColumnsInformationTable class to have a standarized DataTable containing schema information for MySQL columns. (source\Classes\MySqlColumnsInformationTable.cs, source\MySQL.ForExcel.csproj)
- Moved extended methods for the MySqlWorkbenchConnection class that return general information (like GetSchemaCollection) and all related to character sets and collations from to the MySqlWorkbenchConnection class in the MySQL.Utility. Created the GetColumnsInformationTable (that replaced the GetColumnsSchemaInfo one) that returns columns information in a MySqlColumnsInformationTable. Added the IsUnicodeCharSetOrCollation method that checks if a collation or character set is a Unicode one according to MySQL. (source\Classes\MySQLDataUtilities.cs, source\Classes\MySqlDataView.cs)
- Added CharSet and Collation properties to the MySqlDataColumn and MySqlDataTable classes, also subscribe to property change events for its parent MySqlDataTable so in case the CharSet and Collation change on the parent, they also change in the child column. These properties are filled automatically when a MySqlDataTable is created from a corresponding MySQL table. (source\Classes\MySqlDataColumn, source\Classes\MySqlDataTable.cs).
- Split the code in the GetSqlForModifiedRow and moved the logic related to optimistic updates to the new GetSqlForModifiedRowUsingOptimisticConcurrency method. Optimized the construction of WHERE clauses with optimistic updates and TEXT columns to use user variables to store the old column values referenced in the WHERE clause to save query text space in the GetSqlForModifiedRowUsingOptimisticConcurrency method. (source\Classes\MySqlDataRow.cs)
- Fixed code in the CreateOriginalStatementsList method that was overflowing the capacity of the StringBuilder being used to assemble the whole SQL text that

--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -263,6 +263,9 @@
     <Compile Include="Classes\NativeWindowWrapper.cs" />
     <Compile Include="Classes\PropertiesCollection.cs" />
     <Compile Include="Classes\PropertyGroup.cs" />
+    <Compile Include="Classes\MySqlColumnsInformationTable.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Classes\TempRange.cs" />
     <Compile Include="Controls\ExcelAddInPane.cs">
       <SubType>UserControl</SubType>
