--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -235,6 +235,7 @@
     <Compile Include="Classes\DbSchema.cs" />
     <Compile Include="Classes\DbTable.cs" />
     <Compile Include="Classes\DbView.cs" />
+    <Compile Include="Classes\Exceptions\MySqlDataLoadException.cs" />
     <Compile Include="Classes\Exceptions\ParentWorkbookNullException.cs" />
     <Compile Include="Classes\Exceptions\ValueNotSuitableForConversionException.cs" />
     <Compile Include="Classes\ImportDataParams.cs" />
