MYSQLEXCEL-154 - UNABLE TO DELETE CONNECTION INFORMATION
- Renamed the ManageSessionsDialog.cs related files to ManageConnectionInfoDialogs to be consistent with the class name. (source\Forms\ManageConnectionInfoDialogs.cs, source\Forms\ManageConnectionInfoDialogs.Designer.cs, source\Forms\ManageConnectionInfoDialogs.resx, source\MySQL.ForExcel.csproj)
- Fixed code to delete connection information entries selected in the "Manage Import/Edit Connections Information" dialog when the "Accept" button is pressed. Changed code to retain the instance of the ManageConnectionInfoDialog object until the GlobalOptionsDialog itself is disposed of. This in order to avoid destroying and recreating the dialog many times. (source\Forms\GlobalOptionsDialog.cs, source\Forms\GlobalOptionsDialog.Designer.cs)
- Renamed the "Delete Connections" button to "Accept" to reflect the fact that connection information entries are NOT deleted until the "Accept" button on the "Global Options" dialog is pressed. Added code to track connections to delete, and more importantly only track changes done to the "Manage Import/Edit Connections Information" dialog if the "Accept" button is pressed.  Added 2 new options related to removing saved connection information: "Delete automatically connection information where Workbook is no longer found." and "Select connection information entries that have not been accessed in the last XX days". These options aid the user to remove old and unused connection information. (source\Forms\ManageConnectionInfoDialogs.cs, source\Properties\Settings.Designer.cs, source\Properties\Settings.settings, source\app.config)
- Added resource strings to log information about the automatic deletion of connection information related to non-existent Excel Workbooks. (source\Properties\Resources.Designer.cs, source\Properties\Resources.resx)

--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -355,11 +355,11 @@
     <Compile Include="Forms\ImportProcedureForm.Designer.cs">
       <DependentUpon>ImportProcedureForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\ManageSessionsDialog.cs">
+    <Compile Include="Forms\ManageConnectionInfosDialog.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\ManageSessionsDialog.Designer.cs">
-      <DependentUpon>ManageSessionsDialog.cs</DependentUpon>
+    <Compile Include="Forms\ManageConnectionInfosDialog.Designer.cs">
+      <DependentUpon>ManageConnectionInfosDialog.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\PreviewTableViewDialog.cs">
       <SubType>Form</SubType>
@@ -480,8 +480,8 @@
     <EmbeddedResource Include="Forms\ImportProcedureForm.resx">
       <DependentUpon>ImportProcedureForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\ManageSessionsDialog.resx">
-      <DependentUpon>ManageSessionsDialog.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\ManageConnectionInfosDialog.resx">
+      <DependentUpon>ManageConnectionInfosDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\PreviewTableViewDialog.resx">
       <DependentUpon>PreviewTableViewDialog.cs</DependentUpon>
