--- a/source/app.config
+++ b/source/app.config
@@ -100,6 +100,12 @@
             <setting name="EditPreviewMySqlData" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="ConnectionInfosLastAccessDays" serializeAs="String">
+                <value>30</value>
+            </setting>
+            <setting name="DeleteAutomaticallyOrphanedConnectionInfos" serializeAs="String">
+                <value>True</value>
+            </setting>
         </MySQL.ForExcel.Properties.Settings>
     </userSettings>
 </configuration>
