MYSQLEXCEL-165 - EXPORT DATA - ENUM AND SET DATA TYPE VALIDATION IS INCORRECT
- Fixed code in the StringValueCanBeStoredWithMySqlType and ValidateUserDataType methods to correctly split a list of tokens delimited by single quotes that may contain commas within the element's text. Fixed also code in the ValidateUserDataType method to check single quotes in each element of a SET or ENUM declaration -see the method below-. (source\Classes\DataTypeUtilities.cs)
- Created the CheckForCorrectSingleQuoting methods to detect if each element in a list of strings is correctly wrapped with single quotes and any other single quote within the element's text is escaped properly using a preceding single quote. (source\Classes\MiscUtilities.cs)
- Created the WarningsContainer class to encapsulate the logic to manage warnings related to MySQL tables and columns in the Export and Append Data dialogs. (source\Classes\WarningsContainer.cs, source\MySQL.ForExcel.csproj)
- Changed the way warnings were added and removed since the its former code was hard to understand and to maintain. Added code to the SetMySqlDataType to display a warning indicating if a SET or ENUM declaration has an error in a specific element of it. (source\Classes\MySQLDataColumn.cs, source\Classes\MySQLDataTable.cs, source\Forms\AppendDataForm.cs, )
- Added a new resource string to display the warning for incorrect SET or ENUM declarations. (source\Properties\Resources.Designer.cs, source\Properties\Resources.resx)
- Moved the ColumnWarningsChangedArgs and TableWarningsChangedArgs classes to their own files. (source\Classes\EventArgs\ColumnWarningsChangedArgs.cs, source\Classes\EventArgs\TableWarningsChangedArgs.cs, source\MySQL.ForExcel.csproj)

--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -235,6 +235,8 @@
     <Compile Include="Classes\DbSchema.cs" />
     <Compile Include="Classes\DbTable.cs" />
     <Compile Include="Classes\DbView.cs" />
+    <Compile Include="Classes\EventArguments\ColumnWarningsChangedArgs.cs" />
+    <Compile Include="Classes\EventArguments\TableWarningsChangedArgs.cs" />
     <Compile Include="Classes\Exceptions\MySqlDataLoadException.cs" />
     <Compile Include="Classes\Exceptions\ParentWorkbookNullException.cs" />
     <Compile Include="Classes\Exceptions\ValueNotSuitableForConversionException.cs" />
@@ -267,6 +269,7 @@
     <Compile Include="Classes\MySqlColumnsInformationTable.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Classes\WarningsContainer.cs" />
     <Compile Include="Classes\TempRange.cs" />
     <Compile Include="Controls\ExcelAddInPane.cs">
       <SubType>UserControl</SubType>
