--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -248,6 +248,8 @@
     <Compile Include="Classes\Exceptions\UnhandledMySqlTypeException.cs" />
     <Compile Include="Classes\ListViewColumnSorter.cs" />
     <Compile Include="Classes\MiscUtilities.cs" />
+    <Compile Include="Classes\MultiHeaderColumn.cs" />
+    <Compile Include="Classes\MultiHeaderRow.cs" />
     <Compile Include="Classes\MySqlColumnMapping.cs" />
     <Compile Include="Classes\MySqlDataColumn.cs">
       <SubType>Component</SubType>
