--- a/source/Properties/Settings.settings
+++ b/source/Properties/Settings.settings
@@ -110,5 +110,8 @@
     <Setting Name="DeleteAutomaticallyOrphanedConnectionInfos" Provider="MySQL.ForExcel.Classes.MySqlForExcelSettings" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="AppendShowDataTypes" Type="System.Boolean" Provider="MySQL.ForExcel.Classes.MySqlForExcelSettings" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
