--- a/source/app.config
+++ b/source/app.config
@@ -106,6 +106,9 @@
             <setting name="DeleteAutomaticallyOrphanedConnectionInfos" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="AppendShowDataTypes" serializeAs="String">
+                <value>False</value>
+            </setting>
         </MySQL.ForExcel.Properties.Settings>
     </userSettings>
 </configuration>
