MYSQLEXCEL-221 - Change packaging solution to do GPL and Commercial on a single step
- Optimized the Package.csproj to build both GPL and Commercial on a single pass, if this parameter "PackageCommercial = y" is passed to the project it builds GPL and Commercial, otherwise it builds GPL only. Fixed a problem of unwanted files being included in the no-install and source ZIP files (like GIT config files, banner templates, etc). Updated the signing actions to accommodate for changes in the v3 signing interface. (Package.csproj)
- Removed the Commercial and GPL solution configurations since they will not be needed anymore to do the packaging. Now opening the Package.sln and building in Release mode will build in GPL by default, to build Commercial as well a parameter needs to be passed to the solution "PackageCommercial = y". (Package.sln)
- Added some entries to ignore by GIT. (.gitignore)

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.gitattributes
 .reviewboardrc
 thumbs.db
 source/bin/
@@ -5,6 +6,7 @@ source/obj/
 Installer/bin/
 Installer/obj/
 ExcelCustomActionTest/
+VisualControlsTests/
 *.user
 **/thumbs.db
 **/bin/**
