MYSQLEXCEL-234 - Create a project to test visual elements (controls)
- Created the VisualControlTests project to visually test in a separate form each custom control in the MySQL.ForExcel.dll. (VisualControlTests\**)
- After testing, discovered some issues to fix in controls and properties to add so the control behaves correctly in different scenarios. (source\Controls\HotLabel.cs, source\Controls\MultiHeaderDataGridView.cs, source\Controls\MySqlLitView.cs, source\Controls\PreviewDataGridView.cs, source\Controls\SearchEdit.*, source\Classes\MySqlListViewNode.cs, source\Controls\TransparentLabel.cs, source\Controls\TransparentPictureBox.cs)
- Adjusted code in the panel classes to accomodate for changes done to controls. (source\Panels\**)

--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,17 @@ source/bin/
 source/obj/
 Installer/bin/
 Installer/obj/
-ExcelCustomActionTest/
-VisualControlsTests/
 *.user
 **/thumbs.db
 **/bin/**
 **/obj/**
+**/ExcelCustomActionTest/**
+**/ExcelCustomActionTest/*.suo
+**/ExcelCustomActionTest/bin/**
+**/ExcelCustomActionTest/obj/**
+**/VisualControlsTests/*.suo
+**/VisualControlsTests/bin/**
+**/VisualControlsTests/obj/**
 bin
 packages
 obj
