MYSQLEXCEL-183 - APPEND DATA - DISABLE WARNINGS FOR COLUMN MAPPING OVERWRITING
- Added a new option called "Confirm column mapping overwriting" to only warn about mappings being overwritten if checked. (source\Forms\AppendAdancedOptionsDialog.cs, source\Forms\AppendAdancedOptionsDialog.Designer.cs, source\Forms\AppendAdancedOptionsDialog.resx, source\Properties\Settings.settings, source\Properties\Settings.Designer.cs, source\app.config)
- Adjusted code in the TargetMySQLTableDataGridView_DragDrop method to only ask for a confirmation for mappings overwriting if the "Confirm column mapping overwriting" advanced option is checked. (source\Forms\AppendDataForm.cs)

--- a/source/Properties/Settings.settings
+++ b/source/Properties/Settings.settings
@@ -110,7 +110,10 @@
     <Setting Name="DeleteAutomaticallyOrphanedConnectionInfos" Provider="MySQL.ForExcel.Classes.MySqlForExcelSettings" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
-    <Setting Name="AppendShowDataTypes" Type="System.Boolean" Provider="MySQL.ForExcel.Classes.MySqlForExcelSettings" Scope="User">
+    <Setting Name="AppendShowDataTypes" Provider="MySQL.ForExcel.Classes.MySqlForExcelSettings" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="AppendConfirmColumnMappingOverwriting" Provider="MySQL.ForExcel.Classes.MySqlForExcelSettings" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
   </Settings>
