--- a/source/app.config
+++ b/source/app.config
@@ -109,6 +109,9 @@
             <setting name="AppendShowDataTypes" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="AppendConfirmColumnMappingOverwriting" serializeAs="String">
+                <value>False</value>
+            </setting>
         </MySQL.ForExcel.Properties.Settings>
     </userSettings>
 </configuration>
