MYSQLEXCEL-228 - APPEND DATA - PROBLEMS WHEN SCROLLING TARGET TABLE GRID
- Created the MultiHeaderCellSpanningInfo class to contain information about spanning header cells needed to correctly clip drawable areas and draw additional header cells. (source\Classes\MultiHeaderCellSpanningInfo.cs, source\MySQL.ForExcel.csproj)
- Moved the logic of the GetHeaderCellSpanningColumnWidths method to the new MultiHeaderCellSpanningInfo class, and extended the logic to compute not only spanning widths, but also visible and overflowing regions. Added code to the OnCellValueChanged method to fix a problem where column widths were not being automatically calculated when adding data to the grid. Adjusted code in the OnPaint method to make use of the information provided by the MultiHeaderCellSpanningInfo and draw correctly spanning header cells. Adjusted code in the AdjustColumnsWidth to make use of the new MultiHeaderCellSpanningInfo class. (source\Controls\MultiHeaderDataGridView.cs)
- Updated the add-in's DLL in the test project to visually perform tests and make sure all scenarios for the MultiHeaderDataGridView are working correctly. (VisualControlsTests\lib\MySQL.ForExcel.dll)

--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -251,6 +251,7 @@
     <Compile Include="Classes\ListViewColumnSorter.cs" />
     <Compile Include="Classes\MiscUtilities.cs" />
     <Compile Include="Classes\MultiHeaderCell.cs" />
+    <Compile Include="Classes\MultiHeaderCellsSpanningInfo.cs" />
     <Compile Include="Classes\MultiHeaderRow.cs" />
     <Compile Include="Classes\MySqlColumnMapping.cs" />
     <Compile Include="Classes\MySqlDataColumn.cs">
