MYSQLEXCEL-112 - Improve SQL queries for Export and Append data operations
- Added a new option to the Advanced Options dialog for Append and Export Data operations, called "Generate an INSERT statement for each data row", which is off by default. When checked an INSERT statement for each data row being appended or exported is generated in the resulting SQL query sent to the MySQL server. When unchecked a single INSERT statement is generated as a bulk data operation, which performs better than multiple INSERT statements. (source\Forms\AppendAdvancedOptionsDialog.Designer.cs, source\Forms\AppendAdvancedOptionsDialog.cs, source\Forms\AppendAdvancedOptionsDialog.resx, source\Forms\ExportAdvancedOptionsDialog.Designer.cs, source\Forms\ExportAdvancedOptionsDialog.cs, source\Forms\ExportAdvancedOptionsDialog.resx, source\Properties\Settings.Designer.cs, source\Properties\Settings.settings, source\app.config)
- Created the AdjustSettingsForBulkInserts method to adjust the value of the flags set to true by default related to bulk operations that now need to be set to off by default. Created the PerformSettingsAdjustments method to group the calls to methods that adjust values in the settings file that change from one version to another. (source\ThisAddIn.cs)
- Modified the CreateOriginalStatementsList method to generate MySqlDummyRow objects containing INSERT statements for bulk Append and Export Data operations. (source\Forms\MySqlScriptDialog.cs)
-  Created the GetBulkInsertDummyRows and GetBulkInsertSql methods to assemble a single INSERT statement used for bulk operations and improve performance on Export and Append Data operations. Renamed GetTableDummyRows to GetDummyRowsForTableCreationAndIndexOptimization to make intentions clearer. Slightly modified the GetPreSqlForAddedRows method to format the INSERT statement differently for bulk operations VS multiple statement ones. (source\Classes\MySQLDataTable.cs)
- Modified the GetSqlForAddedRow method in response to the M

--- a/source/Properties/Settings.settings
+++ b/source/Properties/Settings.settings
@@ -116,5 +116,14 @@
     <Setting Name="AppendConfirmColumnMappingOverwriting" Provider="MySQL.ForExcel.Classes.MySqlForExcelSettings" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="ExportGenerateMultipleInserts" Provider="MySQL.ForExcel.Classes.MySqlForExcelSettings" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="AppendGenerateMultipleInserts" Provider="MySQL.ForExcel.Classes.MySqlForExcelSettings" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="AdjustedMultipleInsertFlags" Provider="MySQL.ForExcel.Classes.MySqlForExcelSettings" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
