--- a/source/app.config
+++ b/source/app.config
@@ -112,6 +112,15 @@
             <setting name="AppendConfirmColumnMappingOverwriting" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="ExportGenerateMultipleInserts" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="AppendGenerateMultipleInserts" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="AdjustedMultipleInsertFlags" serializeAs="String">
+                <value>False</value>
+            </setting>
         </MySQL.ForExcel.Properties.Settings>
     </userSettings>
 </configuration>
