MYSQLEXCEL-256 - Improve internal handling of mysql data types to use MySqlDataType class
- Renamed the MySqlDataType class to MySqlDisplayDataType, the purpose of this class is to only represent the valid MySQL data types as displayed to users in MySQL for Excel dialogs. (source\Classes\MySqlDisplayType.cs)
- Created the MySqlDataType class to represent an encapsulated MySQL data type that can be queried for its properties and attributes, and that is self validated. This class now contains all functionality related to MySQL data types for better maintainibility. (source\Classes\MySqlDataType.cs, source\MySQL.ForExcel.csproj)
- Moved all data-type related code from the DataTypeUtilities class to the new MySqlDataType one and deleted it. (source\Classes\DataTypeUtilities.cs, source\Classes\MySqlDataType.cs, source\Classes\MySQLDataColumn.cs, source\Classes\MySqlDataRow.cs, source\Classes\MySQLDataTable.cs, source\Classes\MiscUtilities.cs, source\Forms\AppendDataForm.cs, source\Forms\ExportDataForm.cs, source\Forms\EditDataDialog.cs)
- Moved the IsMySqlZeroDateTimeValue and IsReadOnly methods from the DataTypeUtilities to the MySqlDataUtilities class. (source\Classes\MySqlDataUtilities.cs)
- Heavily refactored the MySqlDataColumn class to accomodate for the handling of data types. Added the AutoIncrement and DefaultValue properties to be able to maintain these values from the Export Data dialog. Added warnings for the new AutoIncrement and DefaultValue fields. (source\Classes\MySQLDataColumn.cs)
- Added column properties to the Export Data dialog to support the definition of Auto Increment and Default Value for the new MySQL table where the data will be exported to. Added a context menu to declare a numeric field to be Unsigned or to have Zero Fill, accessible by right-clicking the Data Type combo box.   Added the TimeStamp data type to the full list of valid data types, as it was not being shown before. Added help tooltips to fields in the Export Data dialog that exp

--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -229,7 +229,6 @@
   <ItemGroup>
     <Compile Include="Classes\CustomProperty.cs" />
     <Compile Include="Classes\CustomPropertyDescriptor.cs" />
-    <Compile Include="Classes\DataTypeUtilities.cs" />
     <Compile Include="Classes\DbObject.cs" />
     <Compile Include="Classes\DbProcedure.cs" />
     <Compile Include="Classes\DbSchema.cs" />
@@ -264,6 +263,7 @@
     </Compile>
     <Compile Include="Classes\MySqlDataType.cs" />
     <Compile Include="Classes\MySqlDataUtilities.cs" />
+    <Compile Include="Classes\MySqlDisplayDataType.cs" />
     <Compile Include="Classes\MySqlDummyRow.cs" />
     <Compile Include="Classes\MySqlForExcelSettings.cs" />
     <Compile Include="Classes\MySqlListViewNode.cs" />
@@ -580,6 +580,7 @@
     <None Include="Resources\clear_output.png" />
     <None Include="Resources\edit.png" />
     <None Include="Resources\exit.png" />
+    <None Include="Resources\help.png" />
     <Content Include="Resources\mysql-for-excel.ico" />
     <None Include="Resources\MySQLforExcel-ObjectPanel-EditData-24x24.png" />
     <None Include="Resources\MySQLforExcel-ObjectPanel-EditData-Disabled-24x24.png" />
