MYSQLEXCEL-210 - FIELD WON'T RETAIN LEADING ZEROS
- Added the DATE_FORMAT, DATETIME_FORMAT and TEXT_FORMAT constants used to format imported MySQL data in Excel. (source\Classes\ExcelUtilities.cs)
- Created the FormatImportExcelRange method to format an Excel range depending on the data types of the columns of the MySqlDataTable being imported. Added code to the ImportDataIntoExcelRange method to call FormatImportExcelRange. Since this is the method used by the Edit Data operation, this fixes the problems where users see leading zeros being stripped from numbers stored in text-based columns. (source\Classes\MySQLDataTable.cs)
- Added code to the BindMySqlDataTable method to call MySqlDataTable.FormatImportExcelRange before binding the ListObject to the MySqlDataTable. (source\Classes\ImportConnectionInfo.cs)
- Added new advanced options for Import Data operations to define the Excel format to apply to imported DateTime or TimeStamp, Date and Time MySQL data. (source\Forms\ImportAdvancedOptionsDialog.cs, source\Forms\ImportAdvancedOptionsDialog.Designer.cs, source\Forms\ImportAdvancedOptionsDialog.resx, source\Properties\Settings.Designer.cs, source\Properties\Settings.settings, source\app.config)

--- a/source/Properties/Settings.settings
+++ b/source/Properties/Settings.settings
@@ -125,5 +125,14 @@
     <Setting Name="AdjustedMultipleInsertFlags" Provider="MySQL.ForExcel.Classes.MySqlForExcelSettings" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="ImportExcelFormatLongDates" Provider="MySQL.ForExcel.Classes.MySqlForExcelSettings" Type="System.String" Scope="User">
+      <Value Profile="(Default)">m/d/yyyy h:mm</Value>
+    </Setting>
+    <Setting Name="ImportExcelFormatShortDates" Provider="MySQL.ForExcel.Classes.MySqlForExcelSettings" Type="System.String" Scope="User">
+      <Value Profile="(Default)">m/d/yyyy</Value>
+    </Setting>
+    <Setting Name="ImportExcelFormatTime" Provider="MySQL.ForExcel.Classes.MySqlForExcelSettings" Type="System.String" Scope="User">
+      <Value Profile="(Default)">hh:mm:ss</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
