--- a/source/app.config
+++ b/source/app.config
@@ -121,6 +121,15 @@
             <setting name="AdjustedMultipleInsertFlags" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="ImportExcelFormatLongDates" serializeAs="String">
+                <value>m/d/yyyy h:mm</value>
+            </setting>
+            <setting name="ImportExcelFormatShortDates" serializeAs="String">
+                <value>m/d/yyyy</value>
+            </setting>
+            <setting name="ImportExcelFormatTime" serializeAs="String">
+                <value>hh:mm:ss</value>
+            </setting>
         </MySQL.ForExcel.Properties.Settings>
     </userSettings>
 </configuration>
